# koreader-highlights-collector

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  celery_app.py  celerybeat_schedule.py  collect_highlights.py  docker-compose.yml  pyproject.toml  requirements.txt  tasks.py
app/: __init__.py  models.py
app/services/: imagestore.py  openlibrary.py
app/templates/: landing.html  layout.html
app/templates/books/: detail.html  edit.html  list.html
app/templates/config/: index.html
app/templates/errors/: 404.html  500.html
app/templates/exports/: job_status.html  jobs.html
app/templates/jobs/: index.html
app/views/: books.py  config.py  exports.py  jobs.py  tasks.py
core/: __init__.py  collector.py  parser.py  schemas.py
docs/: ARCHITECTURE.md  PLAN.md  colors.md  screenshots.md
scripts/: add_image_blob_columns.sql  add_job_retention_days.sql  add_scan_schedule_column.sql  fix_escaped_quotes.py  init_env.sh  migrate_add_export_tables.py  upgrade_schema.sql
tests/: conftest.py  test_app.py  test_collector.py  test_parser.py
