[project]
name = "kollector"
version = "0.1.0"
description = "KOllector - Flask app to manage KOReader highlights with Celery ingestion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=2.3",
  "Flask-SQLAlchemy>=3.1",
  "SQLAlchemy>=2.0",
  "celery>=5.3",
  "psycopg[binary]>=3.1",
  "gunicorn>=21.2",
  "pydantic>=2.5",
  "requests>=2.31",
  "Pillow>=10.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
addopts = [
  "-q",
  "--cov=core",
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-fail-under=60",
]
testpaths = [
  "tests",
]
